# point-loc-B-tree

./: .clang-format  CMakeLists.txt  LineSegment.cpp  LineSegment.h  MiddleNode.cpp  MiddleNode.h  MiddleTree.cpp  MiddleTree.h  Node.cpp  Node.h  Point.cpp  Point.h  README.md  SuperNode.cpp  SuperNode.h  SuperTree.cpp  SuperTree.h  Tree.cpp  Tree.h  global_const.h  line-seg.txt  main.cpp  test.cpp
